Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- Generic select widget: now possible to set display width and max size
  parameters for the 'other' option.
- Local vocabularies support, take a look at doc/localvocabulary.txt for more
  information.
- New ZippedHtmlWidget: store a zip file that contains html which can be
  viewed online. Using index.html or any html file from the zip as preview
  page.
Bug fixes:
~~~~~~~~~~
- Made the Layout.renderLayoutStyle() method more generic so that it can deal
  with any mode.
- Fixed HTML errors in Boolean Widget render method (invalid id, invalid label
  in edit mode)
- Fixed error when saving changes on layout properties in the ZMI.
- Better decoration for the CPSDocumentLanguageSelectWidget through CSS.
- Fixed the BMP bug (#305)
- Widgets controlling a forbidden field are now correctly hidden.
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
-